--- a/NovoePokolenie/NovoePokolenie.csproj
+++ b/NovoePokolenie/NovoePokolenie.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Comment\" />
     <Folder Include="wwwroot\profile_img\" />
   </ItemGroup>
 
