--- a/NovoePokolenie/NovoePokolenie.csproj
+++ b/NovoePokolenie/NovoePokolenie.csproj
@@ -37,6 +37,7 @@
     <Folder Include="Views\Manager\" />
     <Folder Include="Views\Mentor\" />
     <Folder Include="wwwroot\profile_img\" />
+    <Folder Include="wwwroot\projects\" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties wwwroot_4lib_4bootstrap_4dist_4css_4bootstrap_1css_1map__JsonSchema="" /></VisualStudio></ProjectExtensions>
