Image profile resizing added

--- a/NovoePokolenie/NovoePokolenie.csproj
+++ b/NovoePokolenie/NovoePokolenie.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="IronSoftware.System.Drawing" Version="2023.12.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.5">
@@ -38,6 +39,13 @@
     <Folder Include="Views\Mentor\" />
     <Folder Include="wwwroot\profile_img\" />
     <Folder Include="wwwroot\projects\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Views\Shared\CustomLoginPage.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties wwwroot_4lib_4bootstrap_4dist_4css_4bootstrap_1css_1map__JsonSchema="" /></VisualStudio></ProjectExtensions>
